--- a/.github/workflows/aap-refresh.yml
+++ b/.github/workflows/aap-refresh.yml
@@ -9,6 +9,7 @@ permissions:  # added using https://github.com/step-security/secure-repo
 
 jobs:
   refresh:
+    if: false
     runs-on: ubuntu-latest
     env:
       PY_COLORS: 1
