--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,15 +10,11 @@ permissions:  # added using https://github.com/step-security/secure-repo
 
 jobs:
   release:
+    if: false
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
-        with:
-          egress-policy: audit
-
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: Setup Python
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
