--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,7 +12,6 @@ permissions:  # added using https://github.com/step-security/secure-repo
 
 jobs:
   build:
-    if: false  # Disable for now until we figure a better path forward
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -22,13 +21,36 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Build docs
-        uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
+      - name: Set up Python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
-          registry: quay.io
-          image: quay.io/crowdstrike/ansible-doc-builder:latest
-          options: -v ${{ github.workspace }}:/usr/share/ansible/collections/ansible_collections/crowdstrike/falcon
-          run: /build.sh
+          python-version: '3.11'
+
+      - name: Build docs
+        run: |
+          # Install dependencies
+          pip install ansible-core antsibull-docs
+
+          # Install collection
+          ansible-galaxy collection build -f
+          ansible-galaxy collection install crowdstrike-falcon-*.tar.gz
+
+          # Create temp build directory
+          TEMP_DIR=$(mktemp -d)
+
+          # Initialize sphinx documentation structure
+          antsibull-docs sphinx-init --use-current --squash-hierarchy --dest-dir ${TEMP_DIR} crowdstrike.falcon
+
+          # Install doc build dependencies
+          pip install -r ${TEMP_DIR}/requirements.txt
+
+          # Build HTML docs
+          cd ${TEMP_DIR} && ./build.sh
+
+          # Copy output to expected location
+          mkdir -p ${{ github.workspace }}/html
+          cp -r ${TEMP_DIR}/build/html/* ${{ github.workspace }}/html/
+          touch ${{ github.workspace }}/html/.nojekyll
 
       - name: Commit files
         run: |
