--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ansible-lint
+        python -m pip install ansible-dev-tools
     - name: Run ansible-lint
       run: ansible-lint
